[package]
authors = ["Elijah Hampton <Elijahhamptonj@proton.me>"]
categories = ["asynchronous", "network-programming", "wasm", "circuit-relay", "web-programming"]
description = "Circuit Relay V2 for libp2p under WASM environment"
edition.workspace = true
keywords = ["circuit-relay", "libp2p", "networking", "peer-to-peer"]
license = "MIT"
name = "libp2p-circuit-relay-v2"
repository = "https://github.com/libp2p/rust-libp2p"
rust-version = { workspace = true }
version = "0.1.0"
publish = true

[build-dependencies]
prost-build = "0.13.5"

[dependencies]
futures = { workspace = true }
js-sys = { version = "0.3" }
libp2p-identity = { workspace = true }
libp2p-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
quick-protobuf = "0.8"
quick-protobuf-codec = { workspace = true }
prost = "0.13.5"

[lints]
workspace = true

[features]
relayv2 = []